# mb_permex

./: MANIFEST.in  README.rst  setup.cfg  setup.py
permission_client/: __init__.py  apps.py  dropdown_menu.py  urls.py  views.py
permission_exchanger/: urls.py  views.py
permission_exchanger/perm_gateway/: apps.py  urls.py  views.py
permission_exchanger/permission_client/: urls.py
permission_exchanger/permission_gateway/: apps.py  urls.py
permission_exchanger/src/permission_client/: urls.py
permission_exchanger/src/permission_gateway/: urls.py
permission_gateway/: admin.py  apps.py  models.py  urls.py  views.py
permission_gateway/migrations/: 0001_initial.py  0002_remove_platformpermission_platform_and_more.py  0003_userplatformpermission.py
src/permission_exchanger/permission_client/: apps.py  urls.py
src/permission_exchanger/permission_gateway/: apps.py  urls.py
